src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: "Poppins", sans-serif;
}

html{
  font-size: 95%;
}

::-webkit-scrollbar{
  scroll-behavior: smooth;
  width: 6px;
}

::-webkit-scrollbar-thumb{
  background-color: #8e8e8e;
  border-radius: 8px;
}

.scroll-container {
  width: 100%; /* Set the width to the full width of the viewport */
  overflow-x: auto; /* Enable horizontal scrolling */
  overflow-y: hidden; /* Hide vertical scrollbar */
  white-space: nowrap; /* Prevent wrapping of content */
}

.content {
  width: 200%; /* Set a width larger than the viewport to enable horizontal scrolling */
}

